--- a/app/views/accounts/create.ejs
+++ b/app/views/accounts/create.ejs
@@ -6,9 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="/create" method="post">
+    <form action="/home/create" method="post">
         <input type="text" name="username" id="username" placeholder="username">
         <input type="text" name="password" id="password" placeholder="password">
+        <input type="text" name="email" id="email" placeholder="email">
         <input type="text" name="phone" id="phone" placeholder="phone">
         <input type="text" name="address" id="address" placeholder="address">
         <input type="submit">
