--- a/app/views/accounts/create.ejs
+++ b/app/views/accounts/create.ejs
@@ -14,5 +14,8 @@
         <input type="text" name="address" id="address" placeholder="address">
         <input type="submit">
     </form>
+    <div>
+        <a href="/home/login">Login</a>
+    </div>
 </body>
 </html>
