--- a/app/views/accounts/login.ejs
+++ b/app/views/accounts/login.ejs
@@ -11,5 +11,8 @@
         <input type="text" name="password" id="password" placeholder="password">
         <input type="submit">
     </form>
+    <div>
+        <a href="/home/create">Create a account</a>
+    </div>
 </body>
 </html>
