--- a/app/views/accounts/product/create.ejs
+++ b/app/views/accounts/product/create.ejs
@@ -13,5 +13,8 @@
         <input type="file" name="image" id="image" placeholder="image">
         <input type="submit">
     </form>
+    <div>
+        <a href="/home">Next Home</a>
+    </div>
 </body>
 </html>
