update send mail

--- a/app/views/accounts/login.ejs
+++ b/app/views/accounts/login.ejs
@@ -5,14 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style>
+    .main{
+        width: 100%;
+        height: 500px;
+        margin-top: 100px;
+        margin-left: 30%;
+    }
+    .main #email{
+        box-shadow: none;
+        border: 1px;
+        border-radius: 5px;
+    }
+    .main #password{
+        border: 1px;
+        border-radius: 5px;
+    }
+    .footer{
+        width: 100%;
+        height: 300px;
+    }
+</style>
 <body>
-    <form action="/home/login" method="post">
-        <input type="text" name="email" id="email" placeholder="email">
-        <input type="text" name="password" id="password" placeholder="password">
-        <input type="submit">
-    </form>
-    <div>
+    <div class="main">
+        <form action="/home/login" method="post">
+            <input type="text" name="email" id="email" placeholder="email">
+            <input type="text" name="password" id="password" placeholder="password">
+            <input type="submit">
+        </form>
+    </div>
+    <div class="footer">
         <a href="/home/create">Create a account</a>
+        <a href="/home/password/reset">Forgot a password</a>
     </div>
 </body>
 </html>
