--- a/app/views/accounts/login.ejs
+++ b/app/views/accounts/login.ejs
@@ -9,34 +9,82 @@
     .main{
         width: 100%;
         height: 500px;
-        margin-top: 100px;
-        margin-left: 30%;
+        margin: 0px;
+        padding: 0px;
+        position: relative;
     }
-    .main #email{
-        box-shadow: none;
-        border: 1px;
+    .main ul, .main li,.main h1{
+        margin: 10px;
+        padding: 0px;
+        
+    }
+    .main h1{
+        text-align: center;
+        color:aqua;
+        position: absolute;
+        top: 100px;
+        left: 30%;
+        width: 400px;
+        height: 200px;
+    }
+    .main ul{
+        list-style: none;
+        position: absolute;
+        top: 150px;
+        left: 35%;
+        width: 400px;
+        height: 200px;
+        cursor: pointer;
+    }
+    .main li{
+        position: relative;
+        top: 20px;
+        left: 20px;
+        clear: both;
+        width: 400px;
+        height: 30px;
+        border: none;
+        
+    }
+    .main li input{
+        width: 250px;
+        height: 30px;
+        border: 1px solid white;
         border-radius: 5px;
     }
-    .main #password{
-        border: 1px;
-        border-radius: 5px;
+    .main li #login {
+        color: aqua;
     }
-    .footer{
-        width: 100%;
-        height: 300px;
+    .main li a{
+        width: 150px;
+        height: 30px;
+        float: left;
+        text-decoration: none;
+        color: aqua;
     }
 </style>
 <body>
+    
     <div class="main">
+        <h1>Login</h1>
         <form action="/home/login" method="post">
-            <input type="text" name="email" id="email" placeholder="email">
-            <input type="text" name="password" id="password" placeholder="password">
-            <input type="submit">
+            <ul>
+                <li>
+                    <input type="text" name="email" id="email" placeholder="email">
+                </li>
+                <li>
+                    <input type="text" name="password" id="password" placeholder="password">
+                </li>
+                <li>
+                    <input id="login" type="submit" value="Login">
+                </li>
+                <li>
+                    <a href="/home/create">Create a account</a>
+                    <a href="/home/password/reset">Forgot a password</a>
+                </li>
+            </ul>
+            
         </form>
-    </div>
-    <div class="footer">
-        <a href="/home/create">Create a account</a>
-        <a href="/home/password/reset">Forgot a password</a>
     </div>
 </body>
 </html>
