--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -26,11 +26,14 @@
       list-style: none;
       margin: 0px;
       padding: 0px;
+      
     }
     #header li a{
       width: 100px;
       height: 30px;
       display: block;
+      text-align: center;
+      text-decoration: none;
     }
     #header ul #logout{
       display: block;
@@ -42,14 +45,37 @@
     #sidebar {
     background: wheat;
     height: 500px;
-    width: 20%;
+    width: 10%;
     float: left;
     }
     #main {
     background-color: burlywood;
     height: 500px;
-    width: 80%;
+    width: 90%;
     float: left;
+    }
+    #main #img{
+      width: 250px;
+      height: 200px;
+      float: left;
+    }
+    #main #img ul li {
+      position: relative;
+      list-style: none;
+    }
+    #main #img ul li #img{
+      
+      width: 150px;
+      height: 100px;
+      border:1px solid wheat;
+      border-radius: 50px;
+
+    }
+    #main #img ul li p{
+      clear: both;
+      width: 200px;
+      height: 10px;
+      margin: 10px;
     }
     #footer {
     background: violet;
@@ -65,7 +91,7 @@
           <a href="/home">Home</a>
         </li>
         <li>
-          <a href="#">Document</a>
+          <a href="/home/product/create">Create Product</a>
         </li>
         <li>
           <a href="#">View</a>
@@ -82,19 +108,32 @@
       sidebar
   </div>
   <div id="main"> 
+    
     <% items.forEach(function(image) { %>
-      <div>
-        <div>
-          <img
+      <div id="img">
+        <ul>
+          <li>
+            <img id="img"
             src="data:image/<%=image.img.contentType%>;base64,
                     <%=image.img.data.toString('base64')%>"
           />
-            <h5><%= image.name %></h5>
-            <p><%= image.title %></p>
-            <p><%= image.money %></p>
-        </div>
+          </li>
+          <li>
+            <p>name:<%= image.name %></p>
+          </li>
+          <li>
+            <p>title:<%= image.title %></p>
+          </li>
+          <li>
+            <p>gia:<%= image.money %></h5></p>
+          </li>
+          <li>
+            <p>Username:<%=image.productId.username%></p>
+          </li>
+        </ul>
       </div>
       <% }) %>
+    
   </div>
   <div id="footer"> 
     footer
