--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -119,6 +119,12 @@
           />
           </li>
           <li>
+            <% if(account.username==image.productId.username){ %>
+            <a href="">Edit</a>
+            <a href="http://localhost:3000/home/delete?id=<%= image.id%>">Delete</a>
+            <%}%>
+          </li>
+          <li>
             <p>name:<%= image.name %></p>
           </li>
           <li>
@@ -130,6 +136,7 @@
           <li>
             <p>Username:<%=image.productId.username%></p>
           </li>
+          
         </ul>
       </div>
       <% }) %>
